migração de projeto.

--- a/AspNet.CRUD/AspNet.CRUD.csproj
+++ b/AspNet.CRUD/AspNet.CRUD.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -123,6 +125,25 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Jumpers.cs">
+      <DependentUpon>JumpersModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JumpersMetadado.cs" />
+    <Compile Include="Models\JumpersModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JumpersModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JumpersModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JumpersModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JumpersModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JumpersModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,7 +153,6 @@
     <Content Include="Content\Site.css" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Models\todo.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.0.js" />
@@ -157,6 +177,30 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EntityDeploy Include="Models\JumpersModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>JumpersModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Models\JumpersModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>JumpersModel.edmx</DependentUpon>
+      <LastGenOutput>JumpersModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\JumpersModel.edmx.diagram">
+      <DependentUpon>JumpersModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\JumpersModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>JumpersModel.edmx</DependentUpon>
+      <LastGenOutput>JumpersModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
