--- a/AspNet.CRUD/AspNet.CRUD.csproj
+++ b/AspNet.CRUD/AspNet.CRUD.csproj
@@ -166,6 +166,8 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.0.js" />
     <Content Include="Scripts\jquery-3.1.0.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -221,10 +223,10 @@
     <Content Include="Views\Jumper\Visualizar.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Jumper\Excluir.cshtml" />
+    <Content Include="Views\Jumper\_Excluir.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Jumper\_Excluir.cshtml" />
+    <Content Include="Views\Jumper\_Listagem.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
