--- a/AspNet.CRUD/Web.config
+++ b/AspNet.CRUD/Web.config
@@ -37,6 +37,10 @@
     </pages>
   </system.web>
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
