--- a/AspNet.CRUD/AspNet.CRUD.csproj
+++ b/AspNet.CRUD/AspNet.CRUD.csproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Style.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
